--- a/style.css
+++ b/style.css
@@ -14,3 +14,16 @@ body {
   height: 100vh;
   font-family: 'Lato' sans-serif;
 }
+
+.movie-container {
+  margin: 20px 0;
+}
+
+.movie-container select {
+  background-color: #fff;
+  border: 0;
+  border-radius: 5px;
+  font-size: 14px;
+  margin-left: 10px;
+  padding: 5px 15px 5px 15px;
+}
